--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Elit Photography&mdash; Onepage Website Template by Colorlib</title>
+    <title>Madibaevs Graphic Studio &mdash; Professional Design Studio </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
