--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Madibaevs Graphic Studio &mdash; Professional Design Studio </title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no , user-scalable=no">
 
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900|Oswald:400,700" rel="stylesheet">
 
