--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                 <div class="row justify-content-center align-items-center">
                     <div class="col-md-7 text-center">
                         <h1 class="text-white heading text-uppercase" data-aos="fade-up">Дизайн будущего</h1>
-                        <p class="lead text-white mb-5" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore animi accusantium voluptatum saepe. Natus nihil, facere corporis numquam, architecto dolorum.</p>
+                        <p class="lead text-white mb-5" data-aos="fade-up" data-aos-delay="100" style="padding-left: 2%; padding-right: 2%;
+">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore animi accusantium voluptatum saepe. Natus nihil, facere corporis numquam, architecto dolorum.</p>
                         <p data-aos="fade-up" data-aos-delay="100"><a href="#section-contact" class="btn btn-primary btn-md smoothscroll">Написать нам</a></p>
                     </div>
                 </div>
